--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
-<html>
-    <header>
-        <!-- <script  src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
-        <script  src="vue.js"></script>
-    </header>
-    <body>
-        <div id="app" >
-         <h1>{{title}}</h1>
-         <ul>
-             <li v-for="lang in list">
-                 {{ lang }}
-                <button @click="DeleteItem(lang)"> - </button>
-            </li>
-            <li v-if='newitem'>{{newitem}}</li>
-         </ul> 
-         <input v-model='newitem'> 
-         <button @click='Additem()'>Add</button>
-        </div>
-    </body>
-    <footer>
-        <script src="./main.js"></script>
-    </footer>
 
+<html>
+    <link href="https://unpkg.com/todomvc-app-css@2.1.0/index.css" rel="stylesheet" />
+<section class="todoapp">
+  <header class="header">
+
+    <h1>todos</h1>
+    <input class="new-todo" autocomplete="off" v-model="newTodo" @keyup.enter="addTodo" placeholder="What needs to be done?">
+  </header>
+  <section class="main">
+    <input class="toggle-all" id="toggle-all" type="checkbox" v-model="allDone">
+    <label for="toggle-all">Mark all as complete</label>
+
+    <ul class="todo-list">
+      <li class="todo" v-for="(todo,index) in filterdTodos" :class="{completed:todo.completed,editing:todo==editingTodo}">
+        <div class="view">
+          <input class="toggle" type="checkbox" v-model="todo.completed">
+          <label @dblclick="editTodo(todo)">{{todo.title}}</label>
+          <button class="destroy" @click="deleteTodo(index)"></button>
+        </div>
+        <input class="edit" type="text" v-model="todo.title" @keyup.enter="doneEditing()" @keyup.esc="cancelEditing()">
+      </li>
+    </ul>
+  </section>
+  <footer class="footer">
+    <span class="todo-count">
+      <strong>{{remaningTodos}}</strong> {{remaningText}} left
+    </span>
+    <ul class="filters">
+      <li><a href="#" @click.prevent="visibility='all' " :class="{selected:visibility=='all'}">All</a></li>
+      <li><a href="#" @click.prevent="visibility='active' " :class="{selected:visibility=='active'}">Active</a></li>
+      <li><a href="#" @click.prevent="visibility='completed' " :class="{selected:visibility=='completed'}">Completed</a></li>
+    </ul>
+    <button class="clear-completed" @click="removeCompleted">
+      Clear completed
+    </button>
+   
+  </footer>
+    
+</section>
+<script src="./vue.js"></script>
+<script src="./main.js"></script>
 </html>
